--- a/style.css
+++ b/style.css
@@ -1,58 +1,70 @@
 * {
-	margin: 0px;
-	padding: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
 header {
-	margin: 10px;
+    margin: 10px;
     width: 100%;
     height: 60px;
-	font: 14px "Verdana";
-	text-shadow: 4px 2px 8px #AABBCC;
-	animation: anim 30s infinite;
+    font: 14px "Verdana";
+    text-shadow: 4px 2px 8px #AABBCC;
+    animation: anim 30s infinite;
 }
 
 @keyframes anim {
-	0% { color: black; }
-	25% { color: red; }
-	50% { color: green; }
-	75% { color: blue; }
-	100% { color: black; }
+    0% { color: black; }
+    25% { color: red; }
+    50% { color: green; }
+    75% { color: blue; }
+    100% { color: black; }
 }
 
 #container {
-	margin-left: 20px;
-	border-bottom: 1px black solid;
+    margin-left: 20px;
+    border-bottom: 1px black solid;
 }
 
 div > h1 {
-	font: 20px "Verdana";
-	font-weight: bold;
+    font: 20px "Verdana";
+    font-weight: bold;
 }
 
 div > label  {
-	font: 16px "Georgia";
+    font: 16px "Georgia";
 }
 
 #controls {
-	border-bottom: 1px black solid;
+    border-bottom: 1px black solid;
 }
 
 #controls > div {
-	margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 #searchresult {
-	margin: 30px;
-	font: 16px "Georgia";
+    margin: 30px;
+    font: 16px "Georgia";
 }
 
 #searchresult > ul > li > a {
-	text-decoration: none;
+    text-decoration: none;
+}
+
+.locale {
+    display: none;
+}
+
+.lat, .long {
+    display: none;
+}
+
+ul {
+    list-style-type: disc;
 }
 
 footer {
-	margin: 10px 20px;
-	font: 14px "Georgia";
-	text-align: right;
+    margin: 10px 20px;
+    font: 14px "Georgia";
+    text-align: right;
 }
